--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -586,7 +586,7 @@
                 </div>
                 <div class="form-group">
                     <label for="resume">Resume/CV *</label>
-                    <div class="file-upload" onclick="document.getElementById('resume').click()">
+                    <div class="file-upload">
                         <input type="file" id="resume" name="resume" accept=".pdf,.doc,.docx" style="display: none;" required>
                         <p style="color: #00d4ff; font-weight: 600;">📄 Click to upload your resume</p>
                         <p style="color: #8892b0; font-size: 0.9rem;">Supported formats: PDF, DOC, DOCX</p>
